@@ -14,9 +14,12 @@ WRITE_SINGLE_REGISTER = 0x06
 WRITE_MULTIPLE_COILS = 0x0F
 WRITE_MULTIPLE_REGISTERS = 0x10
 WRITE_READ_MULTIPLE_REGISTERS = 0x17
-MODBUS_ENCAPSULATED_INTERFACE = 0x2B
+ENCAPSULATED_INTERFACE_TRANSPORT = 0x2B
 SUPPORTED_FUNCTION_CODES = (READ_COILS, READ_DISCRETE_INPUTS, READ_HOLDING_REGISTERS, READ_INPUT_REGISTERS,
-                            WRITE_SINGLE_COIL, WRITE_SINGLE_REGISTER, WRITE_MULTIPLE_COILS, WRITE_MULTIPLE_REGISTERS, WRITE_READ_MULTIPLE_REGISTERS)
+                            WRITE_SINGLE_COIL, WRITE_SINGLE_REGISTER, WRITE_MULTIPLE_COILS, WRITE_MULTIPLE_REGISTERS, 
+                            WRITE_READ_MULTIPLE_REGISTERS, ENCAPSULATED_INTERFACE_TRANSPORT)
+# MEI type
+MEI_TYPE_READ_DEVICE_ID = 0x0E
 # Modbus except code
 EXP_NONE = 0x00
 EXP_ILLEGAL_FUNCTION = 0x01
@@ -86,3 +89,5 @@ MB_ERR_TXT = {
     MB_CRC_ERR: 'bad CRC on receive frame',
     MB_SOCK_CLOSE_ERR: 'socket is closed'
 }
+# Misc
+MAX_PDU_SIZE = 253
